# formal_task

./: .gitignore  CMakeLists.txt  Tests.cpp  Tests.h  description.txt  machine.cpp  machine.h  main.cpp
code_coverage/: Tests.cpp.gcda  index.html  machine.cpp.gcda  test_main.cpp.gcda
code_coverage/report/: index-sort-f.html  index-sort-l.html
code_coverage/report/9/: index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  utility.func-sort-c.html  utility.func.html  utility.gcov.html
code_coverage/report/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  deque.tcc.func.html  deque.tcc.gcov.html  functional_hash.h.func-sort-c.html  functional_hash.h.func.html  functional_hash.h.gcov.html  hashtable.h.func-sort-c.html  hashtable.h.func.html  hashtable.h.gcov.html  hashtable_policy.h.func-sort-c.html  hashtable_policy.h.func.html  hashtable_policy.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  move.h.func-sort-c.html  move.h.func.html  (+49 more)
(+51 files in other folders)
